--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,8 @@ max-complexity = 10
 
 [isort]
 default_section = THIRDPARTY
-known_first_party = yatube_api
+known_first_party = yatube_api, api, posts
+known_third_party = rest_framework
 known_django = django
 sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+no_lines_before = LOCALFOLDER
